--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev": "concurrently \"yarn server:dev\" \"yarn client:dev\"",
     "server:dev": "ts-node src",
     "client:dev": "parcel watch client/app.html --dist-dir dist/client",
-    "server:build": "parcel build client/app.html --dist-dir dist/client"
+    "client:build": "parcel build client/app.html --dist-dir dist/client",
+    "server:build": "tsc -p tsconfig.server.json"
   }
 }
